fix display of beacon table when there are no variants and on smaller screens

--- a/src/app/components/pages/variant/variant.component.css
+++ b/src/app/components/pages/variant/variant.component.css
@@ -17,6 +17,7 @@
 .beacon, .reference {
     flex-grow: 1;
     flex-basis: 0;
+    min-width: 300px;
 }
 
 .highlight-number {
